# spakky-rabbitmq

./: README.md  docker-compose.ci.yml  pyproject.toml
.github/workflows/: test.yml
spakky_rabbitmq/: main.py  post_processor.py
spakky_rabbitmq/event/: config.py  consumer.py  publisher.py
spakky_rabbitmq/plugins/: rabbitmq.py
tests/: conftest.py  test_event.py
tests/apps/: dummy.py
tests/plugins/: test_rabbitmq.py
