[tool.poetry]
name = "spakky-rabbitmq"
version = "1.0.0"
description = "Highly abstracted Framework core to use DDD & DI/IoC & AOP & Etc..."
authors = ["Spakky <sejong418@icloud.com>"]
readme = "README.md"

[tool.poetry.plugins."spakky.plugins"]
rabbitmq = "spakky_rabbitmq.main:initialize"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
spakky-core = ">=2.10"
aio-pika = "^9.4.3"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
jsons = "^1.6.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
toml = "^0.10.2"
ruff = "^0.9.6"
pre-commit = "^4.1.0"
testcontainers = "^4.10.0"

[tool.poetry.group.ci.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.4.0"
ruff = "^0.9.6"
testcontainers = "^4.10.0"

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = "spakky_rabbitmq"
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    -p no:warnings
    -vv
"""

[tool.coverage.run]
omit = ["tests/*"]
traceback = "short"
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 90
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
]
